# comic-pile

./: .dockerignore  .env  .env.backup  .env.example  .env.test  .gitignore  .htmlhintrc  .opencode.pid  AGENTS.md  AGENT_ASSIGNMENTS.md  AGENT_GUIDELINES.md  ARCHITECTURE_TASK_API.md  ASYNC_REFACTOR_PLAN.md  ASYNC_REFACTOR_PR_DESCRIPTION.md  ASYNC_REFACTOR_SUMMARY.md  AUDIT_SUMMARY.md  BLOCKER_FIX_TRACKER.md  BRANCH_QA_TEST_PLAN.md  BROWSER_TESTS.md  CHANGELOG.md  CI_FAILURES_ANALYSIS.md  CI_FIXES_SUMMARY.md  CODERABBIT_AUDIT.md  COMIC_DEPENDENCIES_GUIDE.md  CONTEXT_DUMP.md  CONTRIBUTING.md  CRITICAL_FIXES_TODO.md  DATA_INTEGRITY_FIXES.md  DEPENDENCY_BLOCKING_FIX.md  DOCKER_MIGRATION.md  DOCS_FIX_SUMMARY.md  Dockerfile  Dockerfile.ci  E2E_FIXES_REPORT.md  E2E_FIX_PROGRESS.md  E2E_TEST_SUMMARY.md  FEATURE_COMPLETE.md  FIX_PLAN.md  FIX_TRACKING.md  GITHUB_PROJECTS_MIGRATION.md  (+123 more)
.agent-artifacts/code-reviews/: code_review-2026-04-03-issue-422-strict-mode.md  (+1 more)
.githooks/: pre-commit  pre-push
.github/workflows/: ci-optimized.yml  ci.yml  (+5 more)
.opencode_handoff/: handoff_20260327_194022.md  handoff_20260327_194022_done.md  handoff_20260327_201516.md
.opencode_logs/: .issues_cache  .model_blacklist  .pr_cache  model_test_results.txt  model_test_results_new.txt  model_tool_test_results.txt  qa_20260327_190001_summary.txt  qa_20260327_202041_summary.txt  qa_20260327_220917_summary.txt  qa_20260328_012344_summary.txt  qa_20260328_045933_summary.txt  qa_20260328_060548_summary.txt  qa_20260328_075903_summary.txt
.sisyphus/: ralph-loop.local.md
agents/: manager_daemon.py  worker_pool_manager.py
alembic/: env.py
app/: __init__.py  access_control.py  auth.py  config.py  constants.py  csrf.py  database.py  dependencies.py  exception_handlers.py  lifecycle.py  logging_utils.py  main.py  main_htmx_backup.py  models.py  security.py
comic_pile/: __init__.py  dependencies.py  dice_ladder.py  queue.py  session.py
docs/: AGENTS.md  ANTI_BINGE_GOAL_TRACKING_EXPLORATION.md  API.md  AUTH_USERS_MULTITENANT_PLAN.md  D10_FIX.md  DATABASE_SAVE_LOAD.md  FEATURES_SINCE_0cd5a462.md  GIT_HOOKS.md  INDEX.md  ISSUE_EXECUTION_PROTOCOL.md  ISSUE_KANBAN.md  OPENCODE_PERMISSIONS.md  PHASE_2_DEFERRED_ISSUES.md  PHASE_3_DATABASE_MIGRATIONS.md  PHASE_8_ROLLOUT_CHECKLIST.md  RALPH_GITHUB_SETUP.md  RALPH_MODE.md  REACT_ARCHITECTURE.md  SQLITE_CLEANUP.md  TASK_API.md  TYPESCRIPT_STRICTNESS_ROADMAP.md  acceptance-criteria.md  blocking-ux-polish-plan.md  changelog.md  frontend-backend-asset-coupling-audit.md  github_api_deprecation.md  position-duplicate-prevention.md  rate_limiting.md  test-architecture-refactoring.md
dogfood-output/: report.md
frontend/: .build-id  .build-timestamp  .env.example  .eslintrc.js  README.md  debug-auth.cjs  debug-console.cjs  debug-errors.cjs  debug-initscript.cjs  debug-token.cjs  debug_test.js  debug_timeline.mjs  dice-playground.html  eslint.config.js  eslint.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.dice.config.ts  playwright.prod-all.config.ts  playwright.prod.config.ts  test_frontend.mjs  test_parser.cjs  test_parser.js  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
playwright-report/: index.html
playwright-report-prod/: index.html
playwright-report-prod-all/: index.html
prompts/: agent-next-task.md  issue-413-dependency-range-fix.md  issue_gantt.md
retro/: 5xx-error-handler-retro.md  INDEX.md  charlie-initial-session.md  manager-daemon-investigation-george.md  manager-recovery-20260105.md  manager2.md  manager3.md  manager6.md  manager7.md  worker-alice-2026-01-04.md  worker-alice-bug-205-retro.md  worker-diana-bug206-retro.md  worker-frank-fix-worktree-nulls.md  worker-julia-task-api-004-retro.md  worker-pool-manager.md  worker-retro-template.md
scripts/: README_thread_management.md  add_ultimates_issues.py  add_xmen_annuals.py  audit_locg_reading_orders.py  audit_thread_positions.py  backup_database.py  backup_postgres.sh  check_frontend_assets.sh  check_xmen_dependencies.py  cleanup_prod_smoke_tests.sql  cleanup_test_users.py  clone.sql  clone_prod_to_local.py  clone_user_simple.py  comic_pile_api.py  complete_annual_dependencies.py  create_absolute_universe_reading_order.py  create_ultimate_universe_dependencies.py  create_ultimate_universe_from_scratch.py  create_user_tasks.py  create_wildstorm_reading_order.py  create_xmen_dependencies.py  dev-all.sh  diagnose_josh.sql  export_db.py  fix_death_metal.sql  fix_miles_issue.py  fix_planetary_blocking.py  fix_stale_blocked_flags.py  fix_thread_positions.py  github_task_client.py  import_db.py  import_reading_orders.py  install-git-hooks.sh  issue-sweep-loop.sh  lint-js.sh  lint.sh  merge_users.py  metrics_db.py  migrate_sqlite_to_postgres.py  (+26 more)
ssl/: .gitkeep
static/: index.html
test-results/: .last-run.json  results.json
tests/: conftest.py  test_admin_refresh_blocked.py  test_analytics.py  test_api_endpoints.py  test_api_first_example.py  test_api_issues.py  test_auth.py  test_bug_fix_duplicate_routes.py  test_bug_report_api.py  test_collection_api.py  test_concurrent_issue_creation.py  test_config_validation.py  test_coverage_gaps.py  test_csrf.py  test_csv_import.py  test_deadlock.py  test_debug.py  test_debug_isolated.py  test_delete_thread_bug.py  test_delete_thread_with_issues.py  test_dependencies.py  test_dependency_api.py  test_dice_ladder.py  test_error_handler.py  test_example.py  test_finish_session_clears_snoozed.py  test_github_task_client.py  test_history.py  test_history_events.py  test_issue_504_reproduction.py  test_issue_api.py  test_issue_migration.py  test_issue_model.py  test_issue_parser.py  test_issues_position_index.py  test_main_error_handlers.py  test_merge_to_main.py  test_migration_uq_constraint.py  test_migration_verification.py  test_mobile_detect.py  (+45 more)
tests_e2e/: README.md  __init__.py  conftest.py  test_api_workflows.py  test_browser_ui.py  test_comprehensive_qol_demo.py  test_dice_ladder_e2e.py  test_position_slider_styling.py  test_thread_repositioning_demo.py
(+1008 files in other folders)
